# publish_assist

./: .dockerignore  Dockerfile.api  README.md  docker-compose.yml  pyproject.toml
api/: db.py  helper.py  main.py  types.py
api/db/: mongo.py
api/routes/: datasets.py  debug_eval.py  generate.py  health.py  ingest.py  jobs.py
api/schema/: __init__.py  dataset.py  ingest.py  job.py  request.py
api/services/: dataset_service.py  generate_service.py  integration_service.py  job_service.py
pipelines/: __init__.py  digital_data_etl.py  evaluation.py  feature_engineering.py  inference.py
publish_assist/: settings.py
publish_assist/application/crawlers/: base.py  custom_article.py  dispatcher.py  substack.py  youtube.py
publish_assist/application/networks/: base.py  embeddings.py  youtube.py
publish_assist/application/preprocessing/: chunking_data_handlers.py  dispatchers.py  (+2 more)
publish_assist/domain/: chunks.py  cleaned_documents.py  documents.py  embedded_chunks.py  eval.py  exceptions.py  prompt.py  queries.py  types.py
publish_assist/infra/: llm.py
publish_assist/utils/: __init__.py  general.py
scripts/: init_qdrant.py
steps/: __init__.py
steps/etl/: crawl_links.py  get_or_create_user.py
steps/evaluation/: evaluate_retrieval.py  generate_dataset.py
steps/feature_engineering/: clean.py  load_to_vector_db.py  query_data_warehouse.py  rag.py
steps/rag/: context.py  intent.py  llm.py  prompt.py  query_expansion.py  rerank.py  retrieval.py
ui/: api_client.py  app.py  state.py
ui/pages/: 1_user.py  2_ingest.py  3_job_status.py  4_generate.py
(+5 files in other folders)
