[tool.poetry]
name = "publish-assist"
version = "0.1.0"
description = "An AI tool to generate articles in a specific author's voice using RAG."
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
zenml = { version = "0.74.0", extras = ["server"] }
pymongo = "^4.6.2"
click = "^8.0.1"
loguru = "^0.7.2"
rich = "^13.7.1"
numpy = "^1.26.4"
poethepoet = "0.29.0"
datasets = "^3.0.1"

# Digital data ETL
selenium = "^4.21.0"
webdriver-manager = "^4.0.1"
beautifulsoup4 = "^4.12.3"
html2text = "^2024.2.26"
jmespath = "^1.0.1"
chromedriver-autoinstaller = "^0.6.4"
fake-useragent = "^1.5.1"

# Feature engineering
qdrant-client = "^1.8.0"
langchain = "^0.2.11"
sentence-transformers = "^3.0.0"

# RAG
langchain-openai = "^0.1.3"
jinja2 = "^3.1.4"
tiktoken = "^0.7.0"
langchain-community = "^0.2.11"

# Utilities
python-dotenv = "^1.0.0"
feedparser = "^6.0.12"
readability-lxml = "^0.8.4.1"
youtube-transcript-api = "^1.2.3"
yt-dlp = "^2025.12.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
